--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -9,7 +9,14 @@
 </head>
 <body>
   <!-- Navbar -->
-  {{> navbar}}
+ <nav>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/views/login">Login</a></li>
+    <li><a href="/views/logout">Logout</a></li>
+    <!-- Add more links as needed -->
+  </ul>
+</nav>
 
   <!-- Main content -->
   <div class="container">
