--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -1,8 +1,12 @@
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
-    <li><a href="/auth/login">Login</a></li>
-    <li><a href="/auth/logout">Logout</a></li>
-    <!-- Add more links as needed -->
+    {{#if authenticated}}
+      <li><a href="/dashboard">Dashboard</a></li>
+      <li><a href="/auth/logout">Logout</a></li>
+    {{else}}
+      <li><a href="/auth/login">Login</a></li>
+      <li><a href="/auth/signup">Sign Up</a></li>
+    {{/if}}
   </ul>
 </nav>
